<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kanshu</string>
    <string name="action_settings">Settings</string>
    <string name="action_like">Favorite</string>
    <string name="action_comment">Comment</string>
    <string name="action_share">Share</string>

    <!-- Sign up page -->
    <string name="kanshucaption">It doesn\'t matter how advanced the text is.
        With Kanshu everything will feel aligned to your level of proficiency.</string>
    <string name="signup_text">Sign Up</string>
    <string name="signin_text">Already have an account?</string>
    <string name="signin_link">Sign In</string>
    <string name="register_text">registering lets you save your progress and choices</string>
    <string name="skip_text">Skip</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="readinglevel_picker_prompt">My Current Reading Ability</string>
    <!-- Sign in page -->
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Sign In</string>
    <string name="Next_button">Done</string>

    <string-array name="readinglevels">
        <item>My Current Reading Ability</item>
        <item>Absolute Beginner</item>
        <item>HSK 1</item>
        <item>HSK 2</item>
        <item>HSK 3</item>
        <item>HSK 4</item>
        <item>HSK 5</item>
        <item>HSK 6</item>
    </string-array>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="topics_activity_title">choose a topic</string>
    <string name="nav_bar_progress">My Progress</string>
    <string name="nav_bar_characters">My Saved Characters</string>
    <string name="nav_bar_exercises">Practice Exercises</string>
    <string name="nav_bar_addons">Add-Ons</string>
    <string name="nav_bar_account">My Account</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_about">About</string>
    <string name="nav_bar_help">Help &amp; Feedback</string>
    <string name="title_progress">My Progress</string>
    <string name="title_my_saved_characters">My Saved Characters</string>
    <string name="title_practice_exercises">Practice Exercises</string>
    <string name="title_add_ons">Add-ons</string>
    <string name="nav_bar_signout">Sign Out</string>
    <string name="about_app_name">Kanshu 1.0.0</string>
    <string name="about_copyright_">Copyright (c) 2015</string>
    <string name="about_tos">Terms of Use</string>
    <string name="about_Pp">Privacy Policy</string>
    <string name="about_open_source_licenses">Open Source Licenses</string>
    <string name="title_activity_os_lib">About</string>

    <string-array name="feedback_topics">
        <item>Select topic</item>
        <item>Suggest new features</item>
        <item>Report issues with the Android app</item>
        <item>Report issues with the dictionary</item>
        <item>Compliment to the team behind Kanshu</item>
    </string-array>

    <string name="action_send">Send</string>
    <string name="action_search">Search</string>
    <string name="feedback_topic">Topic:</string>
    <string name="feedback_default_email">email@email</string>
    <string name="feedback_from">From:</string>
    <string name="feedback_send">Send Feedback</string>
    <string name="feedback_subject">Subject:</string>
    <string name="feedback_subject_hint">What your feedback is about</string>
    <string name="feedback_field">Feedback:</string>

    <string-array name="hsk_levels">
        <item>HSK 1</item>
        <item>HSK 2</item>
        <item>HSK 3</item>
        <item>HSK 4</item>
        <item>HSK 5</item>
        <item>HSK 6</item>
        <item> > HSK</item>
    </string-array>

    <string name="legend_chart_reading_progress">Achievements in reading ability</string>
    <string name="legend_chart_total_chars">Total characters for level</string>
    <string name="legend_chart_saved_chars">Characters saved</string>
    <string name="legend_chart_mastered_chars">Characters mastered</string>
    <string name="legend_chart_read_articles">Articles read</string>

    <string-array name="settings_tabs">
        <item>My Account</item>
        <item>More Settings</item>
    </string-array>

    <string name="title_activity_exercise_page">ExercisePageActivity</string>
    <string name="exercise_complete">Exercise complete!</string>

    <string name="dialog_feedback">How does this make you feel?</string>
    <string name="dialog_send_feedback_title">Send Feedback</string>
    <string name="dialog_send_feedback_option_1">Rate Kanshu on the Play Store</string>
    <string name="dialog_send_feedback_option_2">Spread the Love on Twitter</string>
    <string name="dialog_send_feedback_option_3">I Have a Suggestion</string>

    <string name="preference_file_key">com.kanshu.kanshu.PREFERENCE_FILE_KEY</string>

</resources>
