<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kanshu.android.activity.ReadingActivity">
    <item
        android:id="@+id/action_like"
        android:title="@string/action_like"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_comment"
        android:title="@string/action_comment"
        android:icon="@drawable/ic_comment_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>
</menu>
