<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_send_feedback_title"
        android:textColor="#000000"
        android:textSize="23sp"
        android:padding="10dp"
        style="@style/Kanshu.Light.TextView.Thin"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/dialog_send_feedback_option_1"
            android:id="@+id/dialog_send_feedback_option_1"
            android:background="#d32f2f"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"
            style="@style/Kanshu.Light.TextView.Thin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/dialog_send_feedback_option_2"
            android:id="@+id/dialog_send_feedback_option_2"
            android:background="#d32f2f"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"
            style="@style/Kanshu.Light.TextView.Thin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/dialog_send_feedback_option_3"
            android:id="@+id/dialog_send_feedback_option_3"
            android:background="#d32f2f"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            style="@style/Kanshu.Light.TextView.Thin"/>
    </LinearLayout>
</LinearLayout>