<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navbar_off_white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_extension_black_36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/addonlogo"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_addons"
            android:textSize="14sp"
            android:minHeight="36sp"
            android:gravity="center"
            android:id="@+id/addon"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/addonlogo"
            android:textColor="@color/article_dart_grey"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_person_grey600_36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/accountlogo"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="36sp"
            android:textSize="14sp"
            android:text="@string/nav_bar_account"
            android:id="@+id/account"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/accountlogo"
            android:textColor="@color/article_dart_grey"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_settings_grey600_36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/settingslogo"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="36sp"
            android:textSize="14sp"
            android:text="@string/nav_bar_settings"
            android:id="@+id/settings"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/settingslogo"
            android:textColor="@color/article_dart_grey"
            />
    </RelativeLayout>
</LinearLayout>