<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navbar_off_white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_poll_black_36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/progresslogo"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bar_progress"
            android:textSize="14sp"
            android:minHeight="36sp"
            android:gravity="center"
            android:id="@+id/myprogressbutton"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/progresslogo"
            android:textColor="@color/article_dart_grey"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_characters_black_48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/charlogo"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="36sp"
            android:textSize="14sp"
            android:text="@string/nav_bar_characters"
            android:id="@+id/savedchars"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/charlogo"
            android:textColor="@color/article_dart_grey"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:src="@drawable/ic_assignment_black_36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/practicelogo"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="36sp"
            android:textSize="14sp"
            android:text="@string/nav_bar_exercises"
            android:id="@+id/practice"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/practicelogo"
            android:textColor="@color/article_dart_grey"
            />
    </RelativeLayout>
</LinearLayout>