<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.kanshu.kanshu.LoginActivity"
                android:fitsSystemWindows="true"
                android:background="@drawable/gradient">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/logo"
        android:src="@drawable/kanshu"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_above="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_marginTop="20sp"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_marginTop="15sp"
        android:hint="@string/email"
        android:textColor="@color/abc_secondary_text_material_dark"
        android:textSize="14sp"
        android:textIsSelectable="true"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="4sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:textColor="@color/abc_secondary_text_material_dark"
        android:hint="Password"
        android:textSize="14sp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="4sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot"
        android:text="@string/forgot_password"
        android:layout_marginTop="4sp"
        android:layout_below="@+id/password"
        android:textSize="12sp"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_below="@+id/forgot"
        android:background="#d32f2f"
        android:textColor="#ffffffff"
        android:typeface="normal"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="10sp"
        android:layout_marginTop="25sp"
        android:nestedScrollingEnabled="false"
        android:layout_centerHorizontal="true"
        android:minHeight="30dp"
        android:minWidth="68dp"
        fontPath="fonts/Roboto-Medium.ttf"
        tools:ignore="MissingPrefix"
        android:onClick="Login"/>
</RelativeLayout>
